# rs-template

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: ci.yaml  stale.yaml  stale.yml  tests.yml
