[package]
name = "rust_template"
version = "0.1.0"
authors = ["Austin Lake <austinlake04@gmail.com>"]
edition = "2021"
description = "Template repository for Rust projects"
readme = "https://github.com/austinlake04/rust_template/blob/main/README.md"
repository = "https://github.com/austinlake04/rust_template"
license = "MIT"

[dependencies]
color-eyre = "*"
tracing = "*"
tracing-subscriber = "*"
strum = { version = "*", features = ["derive"] }