[package]
name = "rust-template"
version = "0.1.0"
authors = ["Austin Lake <53884490+austinlucaslake@users.noreply.github.com>"]
edition = "2021"
description = "Template repository for Rust projects"
readme = "https://github.com/austinlucaslake/rust-template/blob/main/README.md"
repository = "https://github.com/austinlucaslake/rust-template"
license = "Apache-2.0"

[dependencies]
color-eyre = "*"
tracing = "*"
tracing-subscriber = "*"
strum = { version = "*", features = ["derive"] }
